2014-04-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added dedication to Borut Razem

2014-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.4.0 RC1 and RC2

2013-06-16 Borut Razem <borutr@users.sourceforge.net>

	* snap.php: mentioned Microsoft Windows - x86_64 official binary package

2013-06-07 Borut Razem <borutr@users.sourceforge.net>

	* snap.php: Microsoft Windows - x86_64 is officialy supported platform

2013-06-02 Borut Razem <borutr@users.sourceforge.net>

	* index.php: Microsoft Windows - x86_64 is officialy supported platform

2013-05-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* left_menu.inc: removed link to the Sandeep's article as it's no longer
	  available at circuitcellar and is integrated in sdccman

2013-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.3.0 release
	* previous.php: moved 3.2.0 release items

2013-05-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.3.0 RC2 and RC3

2013-05-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.3.0 RC1

2013-03-16 Borut Razem <borutr@users.sourceforge.net>

	* snap_header.php: fetch ChangeLog from the new svn repository

2013-03-12 Borut Razem <borutr@users.sourceforge.net>

	* index.php, left_menu.inc: updated after project transition to Allura

2012-12-04 Borut Razem <borutr@users.sourceforge.net>

	* left_menu.inc:
	  updated sdcc wiki url to http://sdcc.sourceforge.net/wiki/

2012-10-19 Borut Razem <borutr@users.sourceforge.net>

	* index.php: added Molnar Karoly to the "Who is SDCC?" list

2012-10-06 Borut Razem <borutr@users.sourceforge.net>

	* index.php: added Raspbian to the list of "known to compile" platforms

2012-08-15 Borut Razem <borutr@users.sourceforge.net>

	* snap.php: enable fourth part in configuration triplets

2012-07-09 Borut Razem <borutr@users.sourceforge.net>

	* index.php: added News - sdcc 3.2.0 release,